1.0.23

- Ensure correct file extension is used (.jbb or .dbb)

1.0.22

- Restore zoom setting when loading file
- Add support for bead symbols
- Add flags for bead colors and bead symbols
- Restore panel visibility when loading file
- Fix problem with arranging when pattern was scrolled down
- Only ask once daily about upgrade to new version
- More infos in Techinfos Dialog